don't hide scrollbar, fixes #8109

--- a/resources/assets/stylesheets/less/news.less
+++ b/resources/assets/stylesheets/less/news.less
@@ -1,7 +1,6 @@
 /* --- news --------------------------------------------------- */
 #news_dialog_content {
     overflow-y: auto; 
-    overflow-x: hidden; 
     padding-right: 15px; 
     padding-top: 10px
 }
